--- a/example/test.html
+++ b/example/test.html
@@ -13,9 +13,12 @@
     number 为 只允许输入数字
 </div>
 <div>
-    <input yee-module="number" />
+    <input yee-module="number" data-number-scale="2"/>
 </div>
 
+<div>
+    <input id="test" type="text"/>
+</div>
 
 <script>
     //测试使用一个模块
@@ -27,9 +30,27 @@
             console.log($.cookie());
         });
     });
+    //定义插件
+    $.fn.extend({afterText: function (setting) {
+        $('<span></span>').html(setting.text).insertAfter(this[0]);
+    }});
+    //调用插件
+    $('#test').afterText({text: 'hello'});
+
 </script>
 
-
+<div>
+    <input id="test2" type="text"/>
+    <input yee-module="after_text" data-text="这里是标签调用" type="text"/>
+</div>
+<script>
+    //定义插件
+    Yee.extend(':input', 'after_text', function (elem,setting) {
+        $('<span></span>').html(setting.text).insertAfter(elem);
+    });
+    //js调用插件
+    $('#test2').yee_after_text({text: 'hello'});
+</script>
 
 </body>
 </html>
