--- a/example/confirm_demo5.html
+++ b/example/confirm_demo5.html
@@ -13,7 +13,8 @@
     <a href="http://www.baidu.com" yee-module="confirm" data-msg="你确认要跳转到百度了吗？" target="_blank">点击跳转百度</a>
 </div>
 <div>
-    <a href="http://www.baidu.com" yee-module="confirm" data-confirm@msg="你确认要跳转到百度了吗？" data-confirm@title="跳转？" target="_blank">点击跳转百度</a>
+    <a href="http://www.baidu.com" yee-module="confirm" data-confirm@msg="你确认要跳转到百度了吗？" data-confirm@title="跳转？"
+       target="_blank">点击跳转百度</a>
 </div>
 <div>
     <button yee-module="confirm" data-confirm@msg="你确认要弹出一个对话框吗？" onclick="alert('弹出窗口');">点击弹出执行js</button>
@@ -32,6 +33,26 @@
         <div>测试 <input value="test"></div>
         <div><input type="submit" value="提交表单"></div>
     </form>
+</div>
+<div>询问之前取消</div>
+<div>
+    <button id="confirm1" yee-module="confirm" data-confirm@msg="确认要删除所选择项了吗？">删除所选</button>
+    <label><input value="1" type="checkbox">测试1</label>
+    <label><input value="2" type="checkbox">测试1</label>
+    <label><input value="3" type="checkbox">测试1</label>
+    <script>
+        //加载 yee-popup 支持 Yee.msg
+        Yee.use('yee-popup').then(function () {
+            //监听询问验证之前是否选择，如果没有选择取消询问
+            $('#confirm1').on('before_confirm', function (ev) {
+                if ($(':input[type=checkbox]:checked').length == 0) {
+                    Yee.msg('还没有选择任何选项');
+                    return false;
+                }
+                return true;
+            });
+        });
+    </script>
 </div>
 
 </body>
